@startuml
class A {
  +name
  +details
  -__init__(self, name, details={}, **kwargs)
  +cls_meth(){static}
  +meth1(self, arg1, arg2='default', *args, **kwargs)
}

A <|-- Child
class Child {
  {static} +clsvar
  +meth1(self, arg1, arg2, arg3=888)
}

ast.NodeVisitor <|-- MyVisitor
class MyVisitor {
}

six.with_metaclass(ABCMeta) <|-- C
class C {
  +my_abstract_method(self, arg1){abstract}
}

class __module__ {
  +LOGGER
  +global_func(arg1, arg2, arg3=None)
}

@enduml
